--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,13 @@ android {
         targetCompatibility = "8"
         sourceCompatibility = "8"
     }
+    sourceSets {
+        main {
+            jni {
+                srcDirs 'src/main/jni', 'src/main/JniLibs/'
+            }
+        }
+    }
 
 }
 
@@ -65,4 +72,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation files('libs/libDaumMapAndroid.jar')
+    implementation files('libs\\libDaumMapAndroid.jar')
 }
