--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SelectUserActivity"></activity>
+        <activity android:name=".GroupActivity"></activity>
+        <activity android:name=".SelectUserActivity" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
