--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        
+        <activity
+            android:name=".SelectGroupActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -32,7 +37,6 @@
             android:name=".SelectUserActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-
         <activity
             android:name=".MapViewActivity"
             android:screenOrientation="portrait"
@@ -85,7 +89,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
@@ -95,7 +98,6 @@
             android:name=".Service.TrackingService"
             android:enabled="true"
             tools:ignore="InnerclassSeparator" />
-
         <service
             android:name=".FirebaseMessaging"
             android:enabled="true"
@@ -105,7 +107,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
