--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.firebase:firebase-core:17.4.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.firebaseui:firebase-ui-firestore:6.2.0'
@@ -49,7 +48,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.github.imperiumlabs:GeoFirestore-Android:v1.5.0'
-
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-localization-v9:0.12.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.8.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.0.0'
@@ -64,7 +62,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -75,4 +72,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation files('libs/libDaumMapAndroid.jar')
+    implementation files('libs/com.skt.Tmap_1.65.jar')
 }
